Fix SonarQube HIGH/MEDIUM issues: extract string constants, instanceof pattern matching, remove deprecated imports